--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "date-fns": "^4.1.0",
     "morgan": "^1.10.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
+    "resend": "^6.0.1",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
