--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
     "morgan": "^1.10.0",
+    "openai": "^5.20.2",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.0.1",
